--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <button type="button">O</button>
         </div>
       </div>
-      <button type="button" class="button-pre-round">Start Game</button>
+      <button type="button" class="button-start-game">Start Game</button>
     </dialog>
   </body>
 </html>
