Add function to place mark

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <button type="button">Restart</button>
         </header>
         <main>
-
+          <!-- rendered grids -->
         </main>
         <footer>
           <p class="x-score">0</p>
