Finish styling header and main

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <div class="wrapper">
       <div class="tic-tac-toe">
         <header>
-          <h1>XO</h1>
+          <h1><span>X</span><span>O</span></h1>
           <p class="whos-turn">X TURN</p>
-          <button type="button">Restart</button>
+          <button type="button">
+            <img src="/img/home.svg" alt="">
+          </button>
         </header>
         <main>
           <!-- rendered grids -->
