Finish styling footer

--- a/index.html
+++ b/index.html
@@ -24,9 +24,18 @@
           <!-- rendered grids -->
         </main>
         <footer>
-          <p class="x-score">0</p>
-          <p class="tie">0</p>
-          <p class="o-score">0</p>
+          <div class="x-score">
+            <p>X</p>
+            <h3>1</h3>
+          </div>
+          <div class="tie-score">
+            <p>TIE</p>
+            <h3>2</h3>
+          </div>
+          <div class="o-score">
+            <p>O</p>
+            <h3>3</h3>
+          </div>
         </footer>
       </div>
       <div class="wrapper-github">
