Add feature to show user current active player

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="tic-tac-toe">
         <header>
           <h1><span>X</span><span>O</span></h1>
-          <p class="whos-turn">X TURN</p>
+          <p class="whos-turn"></p>
           <button type="button">
             <img src="/img/home.svg" alt="">
           </button>
