--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         </header>
         <main>
           <!-- rendered grids -->
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
         </main>
         <footer>
           <div class="x-score">
