--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,600;0,700;0,800;1,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <script src="script.js" defer></script>
   </head>
   <body>
@@ -17,7 +17,7 @@
           <h1><span>X</span><span>O</span></h1>
           <p class="whos-turn"></p>
           <button type="button" class="button-home">
-            <img src="/img/home.svg" alt="">
+            <img src="img/home.svg" alt="">
           </button>
         </header>
         <main>
@@ -69,7 +69,7 @@
       <h1 class="dialog-post-round__winner"></h1>
       <div>
         <button type="button" class="button-home">
-          <img src="/img/home.svg" alt="">
+          <img src="img/home.svg" alt="">
         </button>
         <button type="button" class="button-play-again">PLAY AGAIN</button>
       </div>
