Add multiple functions for 'vs AI' feature
Add button to choose mode on dialog pre-round
Change 2nd player object to have ai property
Add function to toggle ai property
Add function to check if active palyer is ai

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
           <button type="button">O</button>
         </div>
       </div>
-      <button type="button" class="button-start-game">Start Game</button>
+      <button type="button" class="button-game-mode" data-vs="ai">PLAY (VS AI)</button>
+      <button type="button" class="button-game-mode" data-vs="player">PLAY (VS PLAYER)</button>
     </dialog>
 
     <dialog class="dialog-post-round">
