Make mobile responsive
Update rendered content for post-round dialog
Add media queries to CSS
Update readme file

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     <div class="wrapper">
       <div class="tic-tac-toe">
         <header>
-          <h1><span>X</span><span>O</span></h1>
-          <p class="whos-turn"></p>
-          <button type="button" class="button-home">
-            <img src="img/home.svg" alt="">
-          </button>
+          <div>
+            <h1><span>X</span><span>O</span></h1>
+            <p class="whos-turn"></p>
+            <button type="button" class="button-home">
+              <img src="img/home.svg" alt="">
+            </button>
+          </div>
         </header>
         <main>
           <!-- rendered grids -->
